Moved some photos in to be bundled in main to prevent issues with loading on mobile.  Also moved curtains to main app to prevent flash of black background whilst it loads

--- a/src/styles/components/_loading.scss
+++ b/src/styles/components/_loading.scss
@@ -22,7 +22,7 @@
     width: 50%;
     height: 100%;
     background-color: #000; // Black background to prevent flash before image loads
-    background-image: url('/curtains/manos-gkikas-pPA5ActWLLI-unsplash.jpg');
+    // background-image set via inline style in JSX using imported image
     background-size: cover;
     background-repeat: no-repeat;
     will-change: transform;
